--- a/src/main/webapp/html/test.html
+++ b/src/main/webapp/html/test.html
@@ -7,44 +7,73 @@
     <link rel="stylesheet" type="text/css" href="/css/keyvalueeditor.css">
 </head>
 <body>
-	<div id="formdata-keyvaleditor-container" class="row"
-		style="margin-left: 0px; display: block;">
-		<div id="formdata-keyvaleditor">
-			<div class="keyvalueeditor-row">
-				<input type="text" class="keyvalueeditor-key" placeholder="Key" name="keyvalueeditor-paymentId" value="paymentId">
-				<input type="text" class="keyvalueeditor-value keyvalueeditor-value-text" placeholder="Value" name="keyvalueeditor-171" value="171">
-				<input type="file" multiple="" class="keyvalueeditor-value keyvalueeditor-value-file" placeholder="Value" name="keyvalueeditor-171" value="171" style="display: none;">
-				<select class="keyvalueeditor-valueTypeSelector">
-					<option value="text" selected="">Text</option>
-					<option value="file">File</option>
-				</select>
-				<a tabindex="-1" class="keyvalueeditor-delete">
-					<img class="deleteButton" src="/img/delete.png">
-				</a>
-			</div>
-			<div class="keyvalueeditor-row">
-				<input type="text" class="keyvalueeditor-key" placeholder="Key" name="keyvalueeditor-paymentProductType" value="paymentProductType">
-				<input type="text" class="keyvalueeditor-value keyvalueeditor-value-text" placeholder="Value" name="keyvalueeditor-2" value="2">
-				<input type="file" multiple="" class="keyvalueeditor-value keyvalueeditor-value-file" placeholder="Value" name="keyvalueeditor-2" value="2" style="display: none;">
-				<select class="keyvalueeditor-valueTypeSelector">
-					<option value="text" selected="">Text</option>
-					<option value="file">File</option>
-				</select>
-				<a tabindex="-1" class="keyvalueeditor-delete"><img class="deleteButton" src="/img/delete.png"></a>
-			</div>
-			<div class="keyvalueeditor-row keyvalueeditor-last">
-				<input type="text" class="keyvalueeditor-key" placeholder="Key" name="keyvalueeditor-key""="">
-				<input type="text" class="keyvalueeditor-value keyvalueeditor-value-text" placeholder="Value" name="keyvalueeditor-value""="">
-				<input type="file" multiple="" class="keyvalueeditor-value keyvalueeditor-value-file" placeholder="Value" name="keyvalueeditor-value" value="" style="display: none;">
-				<select class="keyvalueeditor-valueTypeSelector">
-					<option value="text" selected="">Text</option>
-					<option value="file">File</option>
-				</select>
+	<div id="formdata-keyvaleditor-container" class="row" style="margin-left: 0px; display: block;">
+		
+	</div>
+	
+	<div style="display: none">
+		<div id="formdata-keyvaleditor-container" class="row"
+			style="margin-left: 0px; display: block;">
+			<div id="formdata-keyvaleditor">
+				<div class="keyvalueeditor-row">
+					<input type="text" class="keyvalueeditor-key" placeholder="Key" name="keyvalueeditor-paymentId" value="paymentId">
+					<input type="text" class="keyvalueeditor-value keyvalueeditor-value-text" placeholder="Value" name="keyvalueeditor-171" value="171">
+					<input type="file" multiple="" class="keyvalueeditor-value keyvalueeditor-value-file" placeholder="Value" name="keyvalueeditor-171" value="171" style="display: none;">
+					<select class="keyvalueeditor-valueTypeSelector">
+						<option value="text" selected="">Text</option>
+						<option value="file">File</option>
+					</select>
+					<a tabindex="-1" class="keyvalueeditor-delete">
+						<img class="deleteButton" src="/img/delete.png">
+					</a>
+				</div>
+				<div class="keyvalueeditor-row">
+					<input type="text" class="keyvalueeditor-key" placeholder="Key" name="keyvalueeditor-paymentProductType" value="paymentProductType">
+					<input type="text" class="keyvalueeditor-value keyvalueeditor-value-text" placeholder="Value" name="keyvalueeditor-2" value="2">
+					<input type="file" multiple="" class="keyvalueeditor-value keyvalueeditor-value-file" placeholder="Value" name="keyvalueeditor-2" value="2" style="display: none;">
+					<select class="keyvalueeditor-valueTypeSelector">
+						<option value="text" selected="">Text</option>
+						<option value="file">File</option>
+					</select>
+					<a tabindex="-1" class="keyvalueeditor-delete"><img class="deleteButton" src="/img/delete.png"></a>
+				</div>
+				<div class="keyvalueeditor-row keyvalueeditor-last">
+					<input type="text" class="keyvalueeditor-key" placeholder="Key" name="keyvalueeditor-key""="">
+					<input type="text" class="keyvalueeditor-value keyvalueeditor-value-text" placeholder="Value" name="keyvalueeditor-value""="">
+					<input type="file" multiple="" class="keyvalueeditor-value keyvalueeditor-value-file" placeholder="Value" name="keyvalueeditor-value" value="" style="display: none;">
+					<select class="keyvalueeditor-valueTypeSelector">
+						<option value="text" selected="">Text</option>
+						<option value="file">File</option>
+					</select>
+				</div>
 			</div>
 		</div>
 	</div>
-
 	<script type="text/javascript" src="/js/jquery.min.js"></script>
-<script type="text/javascript" src="/js/jquery.keyvalueeditor.js"></script>
+	<script type="text/javascript" src="/js/jquery.keyvalueeditor.js"></script>
+	
+	<script type="text/javascript">
+		String.prototype.format = function(O){
+			var s = this.replace(/\@\{(\w+)\}/g, function(t, _o){
+				return O[_o];
+			});
+			return s;
+		};
+		var projectTemplate = [
+						'<div id=@{id} class="keyvalueeditor-row">',
+							'@{name}',
+						'</div>' ].join('');
+		var url = "http://localhost:8080/project/test2";
+		$.getJSON(url,function(data){
+			if(data.code == 1){
+				var projects = data.data.projects
+				$.each(projects,function(i){
+					$("#formdata-keyvaleditor-container").append(projectTemplate.format({name:projects[i].name,id:projects[i].id}))
+				});
+			}
+		});
+		
+		
+	</script>
 </body>
 </html>
