--- a/src/main/webapp/html/test.html
+++ b/src/main/webapp/html/test.html
@@ -51,6 +51,7 @@
 	</div>
 	<script type="text/javascript" src="/js/jquery.min.js"></script>
 	<script type="text/javascript" src="/js/jquery.keyvalueeditor.js"></script>
+	<script type="text/javascript" src="/js/bootstrap.min.js"></script>
 	
 	<script type="text/javascript">
 		String.prototype.format = function(O){
