--- a/src/main/webapp/html/parse_json.html
+++ b/src/main/webapp/html/parse_json.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-	<meta charset="utf-8" />
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>分析页面form表单</title>
 </head>
 <body>
+	转换地址 http://www.utilities-online.info/xmltojson/#.UZM0qaJNtFU
 	<div class="container">
 		
 	</div>
