--- a/src/main/webapp/html/bb.html
+++ b/src/main/webapp/html/bb.html
@@ -4,10 +4,13 @@
         <title>the5fire.com-backbone.js-Hello World</title>
 </head>
 <body>
-<button id="check">报到</button>
-<ul id="world-list">
-</ul>
-<a href="http://www.the5fire.com">更多教程</a>
+
+<select class="envi_select">
+				<option title="http://localhost" value="http://localhost">开发环境</option>
+				<option title="http://61.155.156.159" value="http://61.155.156.159">封测环境</option>
+				<option title="http://imprest.woniu.com" value="http://imprest.woniu.com">正式环境</option>
+			</select>
+
 </body>
 <script type="text/javascript" src="/js/jquery.min.js"></script>
 <script type="text/javascript" src="/js/underscore-min.js"></script>
@@ -48,5 +51,14 @@
         //实例化AppView
         var appview = new AppView;
 })(jQuery);
+</script>
+
+<script src="/js/jquery.editableOptions.min.js"></script>
+<script>
+$(document).ready(function() {
+    $('.envi_select').editableOptions(function() {
+        alert("This function is executed after an option is modified");
+    });
+});
 </script>
 </html>
