--- a/src/main/webapp/html/index.html
+++ b/src/main/webapp/html/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8" />
-	<title>TDC首页</title>
+	<title>测试数据收集系统</title>
 	<style type="text/css">
 		body{margin:0;padding:0;font-size:14px;font-family:Tahoma,SimSun; height:100%}
 		div {display: block;margin:0 auto}
@@ -17,15 +17,22 @@
 		.page_center{width:700px;float:left;border:1px solid #000;min-height: 600px;}
 		.page_right{width:248px;float:right;border:1px solid #969696;}
 		
-		.project_name,.project_list{width:350px;float:left;margin:5px 0 5px 3px;}
+		.project_name,.project_list{width:350px;float:left;margin:2px 0 2px 3px;}
 		.project_delete_link{width:30px;float:right;}
 		.project_add_link{width:80px;float:right;}
+		.project_list .project_name:nth-child(3n+0){background: #93C2F5}
+		.project_list .project_name:nth-child(3n+1){background: #CFD39D}
+		.project_list .project_name:nth-child(3n+2){background: #F7CF9E}
+		.project_name p{height:25px; margin:8px 0 0 3px; border-bottom: 1px solid #969696;}
+		.project_name a{margin-top:8px;}
 		
 		.project_name_edit,.project_name_add{width:265px;}
 		.project_update_bt,.project_cancle_update_bt,.project_cancle_add_bt,.project_add_bt{width:38px;}
 		.project_edit,.function_edit,.project_add,.function_add{display:none;}
 
-		.function_name {width:327px;margin: 2px 0 2px 25px;}
+		.function_name {width:325px;margin: 2px 0 2px 25px;}
+		.function_name p{height:18px; margin:8px 0 0 2px; border-bottom: 1px solid #969696;}
+		.function_name a{margin-top:1px;}
 		.function_delete{width:32px;float:right;}
 		
 		.function_name_edit,.function_name_add {width:245px;}
@@ -34,6 +41,9 @@
 		.function_add_link{width:50px;float:right;}
 		
 		.tdc_list{width:700px;display:inline-block;}
+		.tdc_list .tdc_item:nth-child(3n+2){background: #93C2F5}
+		.tdc_list .tdc_item:nth-child(3n+0){background: #D0D3B3}
+		.tdc_list .tdc_item:nth-child(3n+1){background: #F7CF9E}
 		
 		.tdc_add{width:700px;height:23px; border-bottom: 1px solid #000;}
 		.tdc_add p{height:23px;float:left;padding-top: 3px;}
@@ -94,12 +104,14 @@
 										'<div class="option" id="@{id}" value="@{value}">@{name}</div>',
 										'<div class="option_edit">',
 											'<input type="hidden" class="envi_ipt_id" value="@{id}"/>',
+											'<input type="hidden" class="envi_ipt_pid" value="@{pid}"/>',
 											'<label>地址:</label><input type="text" class="envi_ipt_val" init="输入地址..." value="@{value}"/>',
 											'<label>名称:</label><input type="text" class="envi_ipt_name" init="输入名称..." value="@{name}"/>',
 										'</div>'
 		                              ].join('');
-		function loadEnvi(){
-			var url ="/domain/query";
+		function loadEnvi(pid){
+			$(".select").attr("pid",pid);
+			var url ="/domain/query/"+pid;
 			
 			var envi = $.ajax({
 				url : url,
@@ -115,6 +127,7 @@
 					$.each(domains,function(i){
 						$(".select").append(editabelOptionTemplate.format({
 							id:domains[i].id,
+							pid:domains[i].projectId,
 							value:domains[i].domain,
 							name:domains[i].name
 						}));
@@ -122,6 +135,7 @@
 					if(domains.length == 0){
 						$(".select").append(editabelOptionTemplate.format({
 							id:'',
+							pid:pid,
 							value:'输入地址...',
 							name:'输入名称...'
 						}));
@@ -144,6 +158,7 @@
 				});
 			} else {
 				var id = $(this).children(".envi_ipt_id").val();
+				var pid = $(this).children(".envi_ipt_pid").val();
 				var domain = $(this).children(".envi_ipt_val").val();
 				var name = $(this).children(".envi_ipt_name").val();
 				//添加delete
@@ -160,7 +175,7 @@
 				
 				var saveEnvi = $.ajax({
 					url : url,
-					data:{id:id,name:name,domain:domain},
+					data:{id:id,pid:pid,name:name,domain:domain},
 					type : "get",
 					async:false,
 					dataType : "json"
@@ -223,6 +238,7 @@
 				if(needAppend) {
 					obj.parent().append(editabelOptionTemplate.format({
 						id:'',
+						pid:$(".select").attr("pid"),
 						value:'输入地址...',
 						name:'输入名称...'
 					}));
@@ -235,7 +251,6 @@
 		
 		$(document).ready(function(){
 			loadProject();
-			loadEnvi();
 			
 			$("#parseUrl").click(function(){
 				anlysis();
