--- a/src/main/webapp/html/index.html
+++ b/src/main/webapp/html/index.html
@@ -15,7 +15,7 @@
 		<div class="page_envi">
 			<p class="envi_tips">测试环境</p>
 			<div class="select">
-				<span>请选择...</span><span style="float: right;">▼</span>
+				<span class="select_choice">请选择...</span><span class="select_edit" style="float: right;"></span>
 			</div>
 		</div>
 		<div class="page_center">
