--- a/src/main/webapp/html/index.html
+++ b/src/main/webapp/html/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8" />
-	<title>测试数据收集系统</title>
+	<title>测试数据存储系统</title>
 	<link rel="stylesheet" type="text/css" href="/css/tdc.css">
 </head>
 <body>
