--- a/src/main/webapp/html/index.html
+++ b/src/main/webapp/html/index.html
@@ -29,16 +29,15 @@
 				</div>	
 			</div>
 		</div>
-
 	</div>
 	<script type="text/javascript" src="/js/jquery.min.js"></script>
+	<script type="text/javascript" src="/js/common.js"></script>
 	<script type="text/javascript" src="/js/project.module.js"></script>
 	<script type="text/javascript" src="/js/testcase.js"></script>
 	<script type="text/javascript" src="/js/env.js"></script>
 	<script type="text/javascript">
 		$(document).ready(function(){
 			loadProject();
-			
 			$("#parseUrl").click(function(){
 				anlysis();
 			});
