测试环境改为环境

--- a/src/main/webapp/html/index.html
+++ b/src/main/webapp/html/index.html
@@ -13,7 +13,7 @@
 			<div class="project_list"></div>
 		</div>
 		<div class="page_envi">
-			<p class="envi_tips">测试环境</p>
+			<p class="envi_tips">环境：</p>
 			<div class="select">
 				<span class="select_choice">请选择...</span><span class="select_edit" style="float: right;"></span>
 			</div>
