--- a/src/main/webapp/html/index.html
+++ b/src/main/webapp/html/index.html
@@ -31,6 +31,7 @@
 		</div>
 	</div>
 	<script type="text/javascript" src="/js/jquery.min.js"></script>
+	<script type="text/javascript" src="/js/jquery-ui-1.10.3.custom.js"></script>
 	<!--script type="text/javascript" src="/js/jquery-ui.min.js"></script-->
 	<script type="text/javascript" src="/js/common.js"></script>
 	<script type="text/javascript" src="/js/project.module.js"></script>
@@ -44,10 +45,11 @@
 			});
 			/**
 			
+			*/
 			$(".project_name").sortable({
 				connectWith:".project_name",
 				cursor: "move",
-				update:function(event,ui){
+				receive:function(event,ui){
 					//ui.item
 					var fid = ui.item.attr("fid");
 					var pid = ui.item.parent().attr('pid');
@@ -61,12 +63,12 @@
 					
 					updateFunc.done(function(data){
 						if(data.code == 1){
-							$(".project_list").html('');
-							loadProject();
+							//$(".project_list").html('');
+							//loadProject();
 						}
 					});
 				}
-			});*/
+			});
 		});
 	</script>
 </body>
