--- a/src/main/webapp/html/index.html
+++ b/src/main/webapp/html/index.html
@@ -46,9 +46,13 @@
 			/**
 			
 			*/
+			var hid_obj;
 			$(".project_name").sortable({
 				connectWith:".project_name",
 				cursor: "move",
+				start:function(event,ui){
+					hid_obj = ui.item.next().next();
+				},
 				receive:function(event,ui){
 					//ui.item
 					var fid = ui.item.attr("fid");
@@ -65,6 +69,7 @@
 						if(data.code == 1){
 							//$(".project_list").html('');
 							//loadProject();
+							hid_obj.appendTo(ui.item);
 						}
 					});
 				}
