1.修复method下拉列表change事件时多添加空的input框 2.页面样式微调 3.添加加密页面

--- a/src/main/webapp/html/index.html
+++ b/src/main/webapp/html/index.html
@@ -17,6 +17,7 @@
 			<div class="select">
 				<span class="select_choice">请选择...</span><span class="select_edit" style="float: right;"></span>
 			</div>
+			<div class="links"> <a href="md5.html" target="_blank">加密页面</a></div>
 		</div>
 		<div class="page_center">
 			<div class="tdc_add">
@@ -69,7 +70,8 @@
 						if(data.code == 1){
 							//$(".project_list").html('');
 							//loadProject();
-							hid_obj.appendTo(ui.item);
+							//hid_obj.appendTo(ui.item);
+							ui.item.after(hid_obj);
 						}
 					});
 				}
