修改弹出框大小和表字段

--- a/src/main/webapp/html/index.html
+++ b/src/main/webapp/html/index.html
@@ -32,7 +32,7 @@
 		</div>
 	</div>
 	<script type="text/javascript" src="/js/jquery.min.js"></script>
-	<link rel="stylesheet" type="text/css" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css">
+	<link rel="stylesheet" type="text/css" href="http://code.jquery.com/ui/1.10.3/themes/start/jquery-ui.css">
 	<script type="text/javascript" src="/js/jquery-ui-1.10.3.custom.js"></script>
 	<!--script type="text/javascript" src="/js/jquery-ui.min.js"></script-->
 	<script type="text/javascript" src="/js/common.js"></script>
@@ -81,8 +81,9 @@
 			
 			$( "#transfer_form" ).dialog({
 				autoOpen: false,
-				height: 300,
-				width: 350,
+				title:'转移测试数据',
+				height: 160,
+				width: 320,
 				modal: true,
 				buttons: {
 					"转移":function(){
