--- a/src/main/webapp/html/index.html
+++ b/src/main/webapp/html/index.html
@@ -1,9 +1,10 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-	<meta charset="utf-8" />
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	<title>测试数据存储系统</title>
 	<link rel="stylesheet" type="text/css" href="/css/tdc.css">
+	<link rel="stylesheet" type="text/css" href="http://code.jquery.com/ui/1.10.3/themes/start/jquery-ui.css">
 </head>
 <body>
 	<div class="container">
@@ -31,14 +32,14 @@
 			</div>
 		</div>
 	</div>
-	<script type="text/javascript" src="/js/jquery.min.js"></script>
-	<link rel="stylesheet" type="text/css" href="http://code.jquery.com/ui/1.10.3/themes/start/jquery-ui.css">
-	<script type="text/javascript" src="/js/jquery-ui-1.10.3.custom.js"></script>
+	
 	<!--script type="text/javascript" src="/js/jquery-ui.min.js"></script-->
 	<script type="text/javascript" src="/js/common.js"></script>
 	<script type="text/javascript" src="/js/project.module.js"></script>
 	<script type="text/javascript" src="/js/testcase.js"></script>
 	<script type="text/javascript" src="/js/env.js"></script>
+	<script type="text/javascript" src="/js/jquery-ui-1.10.3.custom.js"></script>
+	<script type="text/javascript" src="/js/jquery.min.js"></script>
 	<script type="text/javascript">
 		$(document).ready(function(){
 			loadProject();
