--- a/src/main/webapp/html/index.html
+++ b/src/main/webapp/html/index.html
@@ -34,12 +34,13 @@
 	</div>
 	
 	<!--script type="text/javascript" src="/js/jquery-ui.min.js"></script-->
+	<script type="text/javascript" src="/js/jquery.min.js"></script>
 	<script type="text/javascript" src="/js/common.js"></script>
 	<script type="text/javascript" src="/js/project.module.js"></script>
 	<script type="text/javascript" src="/js/testcase.js"></script>
 	<script type="text/javascript" src="/js/env.js"></script>
 	<script type="text/javascript" src="/js/jquery-ui-1.10.3.custom.js"></script>
-	<script type="text/javascript" src="/js/jquery.min.js"></script>
+	<script type="text/javascript" src="/js/md5.js"></script>
 	<script type="text/javascript">
 		$(document).ready(function(){
 			//loadProject();使用自调用写法
