fixed transfer testcase dialog not display menu

--- a/src/main/webapp/html/index.html
+++ b/src/main/webapp/html/index.html
@@ -80,7 +80,7 @@
 			});
 			
 			$(".container").append(transferForm);
-			//loadProjectSelect();使用自调用写法
+			loadProjectSelect();//使用自调用写法
 			
 			$( "#transfer_form" ).dialog({
 				autoOpen: false,
