add read only page

--- a/src/main/webapp/html/i.html
+++ b/src/main/webapp/html/i.html
@@ -9,7 +9,7 @@
 	<div class="container">
 		<ul>
 			<li>
-				<a href="/html/index.html">测试数据存储</a>
+				<a href="/html/index2.html">测试数据存储</a>
 			</li>
 			<li>
 				<a href="/html/md5.html">md5/sha1加密</a>
