--- a/src/main/webapp/html/index.html
+++ b/src/main/webapp/html/index.html
@@ -36,7 +36,9 @@
 	<!--script type="text/javascript" src="/js/jquery-ui.min.js"></script-->
 	<script type="text/javascript" src="/js/jquery.min.js"></script>
 	<script type="text/javascript" src="/js/common.js"></script>
+	<script type="text/javascript" src="/js/project.module.template.wr.js"></script>
 	<script type="text/javascript" src="/js/project.module.js"></script>
+	<script type="text/javascript" src="/js/tc_template_wr.js"></script>
 	<script type="text/javascript" src="/js/testcase.js"></script>
 	<script type="text/javascript" src="/js/env.js"></script>
 	<script type="text/javascript" src="/js/jquery-ui-1.10.3.custom.js"></script>
