use min jquery file

--- a/src/main/webapp/html/index2.html
+++ b/src/main/webapp/html/index2.html
@@ -41,7 +41,7 @@
 	<script type="text/javascript" src="/js/tc_template_r.js"></script>
 	<script type="text/javascript" src="/js/testcase.js"></script>
 	<script type="text/javascript" src="/js/env.js"></script>
-	<script type="text/javascript" src="/js/jquery-ui-1.10.3.custom.js"></script>
+	<script type="text/javascript" src="/js/jquery-ui-1.10.3.custom.min.js"></script>
 	<script type="text/javascript" src="/js/md5.js"></script>
 	<script type="text/javascript">
 		$(document).ready(function(){
