--- a/src/main/webapp/html/i.html
+++ b/src/main/webapp/html/i.html
@@ -12,7 +12,7 @@
 				<a href="/html/index2.html">测试数据存储</a>
 			</li>
 			<li>
-				<a href="/html/md5.html">md5/sha1加密</a>
+				<a href="/html/md5.html">md5/sha1加密、base64加解密、大小写转换、字符串比较</a>
 			</li>
 		</ul>
 	</div>
