--- a/src/main/webapp/html/md5.html
+++ b/src/main/webapp/html/md5.html
@@ -4,6 +4,10 @@
 	<meta charset="utf-8" />
 	<title>测试数据存储系统-md5sum</title>
 	<link rel="stylesheet" type="text/css" href="/css/tdc.css">
+	<meta name="keywords" content="md5,sha1,base64加解密,大小写转换,字符串比较" />
+	<meta name="description" content="小工具">
+	<meta name="author" content="lzz313" />
+	<meta name="copyright" content="Copyright (c) 2014 lzz313" />
 </head>
 <body>
 	<div class="container">
