--- a/src/main/webapp/html/test.html
+++ b/src/main/webapp/html/test.html
@@ -59,7 +59,7 @@
       function remotePreview() {
           //alert(parent.main.location.href);
           var uploadUrl = document.getElementById("myiframe").contentWindow.location.href;
-          $.getJSON("http://localhost:83/cache/set?k=url&callback=?&v=" + uploadUrl,  function (data) {
+          $.getJSON("http://192.168.5.120:8080/cache/set?k=url&callback=?&v=" + uploadUrl,  function (data) {
         	 	console.log(data.value); 
           });
           
@@ -73,7 +73,7 @@
     </script>
   </head>
   <body>
-    <iframe id='myiframe' src="http://imprest.woniu.com" frameborder="0" scrolling="yes" marginheight="0" marginwidth="0">
+    <iframe id='myiframe' src="http://192.168.5.120:8080" frameborder="0" scrolling="yes" marginheight="0" marginwidth="0">
 
     </iframe>
   </body>
