--- a/src/main/webapp/html/c.html
+++ b/src/main/webapp/html/c.html
@@ -32,6 +32,7 @@
     <script src="http://libs.baidu.com/jquery/1.9.1/jquery.min.js"></script>
     <script>
       /*global $ */
+      var cache_url = "http://192.168.5.120:8080";
 
       /**
        * Check if it's an URL.
@@ -59,7 +60,7 @@
       function remotePreview() {
           //alert(parent.main.location.href);
           var uploadUrl = document.getElementById("myiframe").contentWindow.location.href;
-          $.getJSON("http://192.168.5.120:8080/cache/set?k=url&callback=?&v=" + uploadUrl,  function (data) {
+          $.getJSON(cache_url+"/cache/set?k=url&callback=?&v=" + uploadUrl,  function (data) {
         	 	console.log(data.value); 
           });
           
@@ -73,7 +74,7 @@
     </script>
   </head>
   <body>
-    <iframe id='myiframe' src="http://192.168.5.120:8080" frameborder="0" scrolling="yes" marginheight="0" marginwidth="0">
+    <iframe id='myiframe' src="" frameborder="0" scrolling="yes" marginheight="0" marginwidth="0">
 
     </iframe>
   </body>
