--- a/src/main/webapp/html/i.html
+++ b/src/main/webapp/html/i.html
@@ -2,16 +2,17 @@
 <html>
 <head>
 	<meta charset="utf-8" />
-	<title>浏览器同步控制工具</title>
+	<title>终端浏览器同步工具</title>
 	<link rel="stylesheet" type="text/css" href="/css/tdc.css">
 </head>
 <body>
 	<div class="container">
 		<ul>
 			<li>
-				浏览器同步控制工具分两部分，控制页面，被控制页面<br>
-				控制页面<a href="/html/c.html">c.html</a> 需要下载放到测试项目相同域名下，控制的浏览器打开该页面;<br>
-				被控制页面 <a href="/html/m.html">m.html</a> 需要下载放到测试项目相同域名下，被控制的浏览器打开该页面。<br>
+				终端浏览器同步工具分两部分，控制页面，被控制页面<br>
+				<br>
+				控制页面<a href="/html/c.html" target="_blank">c.html</a> 需要下载（右击另存为）放到测试项目相同域名下，控制的浏览器打开该页面;<br>
+				被控制页面 <a href="/html/m.html" target="_blank">m.html</a> 需要下载（右击另存为）放到测试项目相同域名下，被控制的浏览器打开该页面。<br>
 				<br>
 				修改c.html和m.html中的cache_url为对应的服务的服务器地址，例如:http://127.0.0.1:8080<br><br>
 			</li>
