add option page

--- a/chrome_plugin/sync_browser/popup.html
+++ b/chrome_plugin/sync_browser/popup.html
@@ -1,16 +1,13 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 	<title>终端浏览器同步工具</title>
 
 </head>
 <body>
-	缓存服务地址：<input id="cache_url" type="text" value="http://localhost:83" /> <br>
-	<input id="start_btn" type="button" value="开始测试" />
-	<input id="stop_btn" type="button" value="停止测试" />
-	<script src="jquery.min.js"></script>
-	<script src="sync.js"></script>
-	,
-		"default_popup": "popup.html" 
+	缓存服务地址：<input id="cache_url" type="text" value="http://127.0.0.1:8080" /> <br>
+	<input id="save_btn" type="button" value="保存" />
+	<script src="config.js"></script>
+
 </body>
 </html>
